@@ -21,7 +21,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --no-conditional-dependencies --no-libtool --macro-prefix=gl --no-vc-files argz getopt-gnu gettext iconv mbchar mbiter mbscasecmp mbschr mbslen mbsncasecmp mbsstr mbswidth memmem memrchr mkstemp regex stdarg strcasestr strdup-posix strerror vasprintf-posix xalloc
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib/lib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --no-conditional-dependencies --libtool --macro-prefix=gl --no-vc-files argz getopt-gnu gettext iconv mbchar mbiter mbscasecmp mbschr mbslen mbsncasecmp mbsstr mbswidth memmem memrchr mkstemp regex stdarg strcasestr strdup-posix strerror vasprintf-posix xalloc
 
 AUTOMAKE_OPTIONS = 1.9.6 gnits subdir-objects
 
@@ -41,12 +41,17 @@ MAINTAINERCLEANFILES =
 AM_CPPFLAGS =
 AM_CFLAGS =
 
-noinst_LIBRARIES += libgnu.a
+noinst_LTLIBRARIES += libgnu.la
 
-libgnu_a_SOURCES =
-libgnu_a_LIBADD = $(gl_LIBOBJS)
-libgnu_a_DEPENDENCIES = $(gl_LIBOBJS)
-EXTRA_libgnu_a_SOURCES =
+libgnu_la_SOURCES =
+libgnu_la_LIBADD = $(gl_LTLIBOBJS)
+libgnu_la_DEPENDENCIES = $(gl_LTLIBOBJS)
+EXTRA_libgnu_la_SOURCES =
+libgnu_la_LDFLAGS = $(AM_LDFLAGS)
+libgnu_la_LDFLAGS += -no-undefined
+libgnu_la_LDFLAGS += $(LTLIBICONV)
+libgnu_la_LDFLAGS += $(LTLIBINTL)
+libgnu_la_LDFLAGS += $(LTLIBTHREAD)
 
 ## begin gnulib module absolute-header
 
@@ -101,7 +106,7 @@ MOSTLYCLEANFILES += argz.h argz.h-t
 
 EXTRA_DIST += argz.c argz.in.h
 
-EXTRA_libgnu_a_SOURCES += argz.c
+EXTRA_libgnu_la_SOURCES += argz.c
 
 ## end   gnulib module argz
 
@@ -110,7 +115,7 @@ EXTRA_libgnu_a_SOURCES += argz.c
 
 EXTRA_DIST += btowc.c
 
-EXTRA_libgnu_a_SOURCES += btowc.c
+EXTRA_libgnu_la_SOURCES += btowc.c
 
 ## end   gnulib module btowc
 
@@ -205,13 +210,13 @@ EXTRA_DIST += errno.in.h
 
 EXTRA_DIST += error.c error.h
 
-EXTRA_libgnu_a_SOURCES += error.c
+EXTRA_libgnu_la_SOURCES += error.c
 
 ## end   gnulib module error
 
 ## begin gnulib module exitfail
 
-libgnu_a_SOURCES += exitfail.c
+libgnu_la_SOURCES += exitfail.c
 
 EXTRA_DIST += exitfail.h
 
@@ -279,7 +284,7 @@ MOSTLYCLEANFILES += float.h float.h-t
 
 EXTRA_DIST += float.c float.in.h itold.c
 
-EXTRA_libgnu_a_SOURCES += float.c itold.c
+EXTRA_libgnu_la_SOURCES += float.c itold.c
 
 ## end   gnulib module float
 
@@ -295,7 +300,7 @@ EXTRA_DIST += fpucw.h
 
 EXTRA_DIST += frexp.c
 
-EXTRA_libgnu_a_SOURCES += frexp.c
+EXTRA_libgnu_la_SOURCES += frexp.c
 
 ## end   gnulib module frexp-nolibm
 
@@ -304,7 +309,7 @@ EXTRA_libgnu_a_SOURCES += frexp.c
 
 EXTRA_DIST += frexp.c frexpl.c
 
-EXTRA_libgnu_a_SOURCES += frexp.c frexpl.c
+EXTRA_libgnu_la_SOURCES += frexp.c frexpl.c
 
 ## end   gnulib module frexpl-nolibm
 
@@ -331,7 +336,7 @@ MOSTLYCLEANFILES += getopt.h getopt.h-t
 
 EXTRA_DIST += getopt.c getopt.in.h getopt1.c getopt_int.h
 
-EXTRA_libgnu_a_SOURCES += getopt.c getopt1.c
+EXTRA_libgnu_la_SOURCES += getopt.c getopt1.c
 
 ## end   gnulib module getopt-posix
 
@@ -354,7 +359,7 @@ EXTRA_DIST += $(top_srcdir)/build-aux/config.rpath
 
 ## begin gnulib module gettext-h
 
-libgnu_a_SOURCES += gettext.h
+libgnu_la_SOURCES += gettext.h
 
 ## end   gnulib module gettext-h
 
@@ -363,7 +368,7 @@ libgnu_a_SOURCES += gettext.h
 
 EXTRA_DIST += gettimeofday.c
 
-EXTRA_libgnu_a_SOURCES += gettimeofday.c
+EXTRA_libgnu_la_SOURCES += gettimeofday.c
 
 ## end   gnulib module gettimeofday
 
@@ -386,7 +391,7 @@ EXTRA_DIST += intprops.h
 
 EXTRA_DIST += float+.h isnan.c isnand-nolibm.h isnand.c
 
-EXTRA_libgnu_a_SOURCES += isnan.c isnand.c
+EXTRA_libgnu_la_SOURCES += isnan.c isnand.c
 
 ## end   gnulib module isnand-nolibm
 
@@ -395,7 +400,7 @@ EXTRA_libgnu_a_SOURCES += isnan.c isnand.c
 
 EXTRA_DIST += float+.h isnan.c isnanf-nolibm.h isnanf.c
 
-EXTRA_libgnu_a_SOURCES += isnan.c isnanf.c
+EXTRA_libgnu_la_SOURCES += isnan.c isnanf.c
 
 ## end   gnulib module isnanf-nolibm
 
@@ -404,7 +409,7 @@ EXTRA_libgnu_a_SOURCES += isnan.c isnanf.c
 
 EXTRA_DIST += float+.h isnan.c isnanl-nolibm.h isnanl.c
 
-EXTRA_libgnu_a_SOURCES += isnan.c isnanl.c
+EXTRA_libgnu_la_SOURCES += isnan.c isnanl.c
 
 ## end   gnulib module isnanl-nolibm
 
@@ -413,7 +418,7 @@ EXTRA_libgnu_a_SOURCES += isnan.c isnanl.c
 
 EXTRA_DIST += iswblank.c
 
-EXTRA_libgnu_a_SOURCES += iswblank.c
+EXTRA_libgnu_la_SOURCES += iswblank.c
 
 ## end   gnulib module iswblank
 
@@ -452,7 +457,7 @@ EXTRA_DIST += langinfo.in.h
 
 ## begin gnulib module localcharset
 
-libgnu_a_SOURCES += localcharset.h localcharset.c
+libgnu_la_SOURCES += localcharset.h localcharset.c
 
 # We need the following in order to install a simple file in $(libdir)
 # which is shared with other installed packages. We use a list of referencing
@@ -564,13 +569,13 @@ EXTRA_DIST += locale.in.h
 
 EXTRA_DIST += localeconv.c
 
-EXTRA_libgnu_a_SOURCES += localeconv.c
+EXTRA_libgnu_la_SOURCES += localeconv.c
 
 ## end   gnulib module localeconv
 
 ## begin gnulib module lock
 
-libgnu_a_SOURCES += glthread/lock.h glthread/lock.c
+libgnu_la_SOURCES += glthread/lock.h glthread/lock.c
 
 ## end   gnulib module lock
 
@@ -579,7 +584,7 @@ libgnu_a_SOURCES += glthread/lock.h glthread/lock.c
 
 EXTRA_DIST += lstat.c
 
-EXTRA_libgnu_a_SOURCES += lstat.c
+EXTRA_libgnu_la_SOURCES += lstat.c
 
 ## end   gnulib module lstat
 
@@ -588,13 +593,13 @@ EXTRA_libgnu_a_SOURCES += lstat.c
 
 EXTRA_DIST += malloc.c
 
-EXTRA_libgnu_a_SOURCES += malloc.c
+EXTRA_libgnu_la_SOURCES += malloc.c
 
 ## end   gnulib module malloc-posix
 
 ## begin gnulib module malloca
 
-libgnu_a_SOURCES += malloca.c
+libgnu_la_SOURCES += malloca.c
 
 EXTRA_DIST += malloca.h malloca.valgrind
 
@@ -603,7 +608,7 @@ EXTRA_DIST += malloca.h malloca.valgrind
 ## begin gnulib module math
 
 BUILT_SOURCES += math.h
-libgnu_a_SOURCES += math.c
+libgnu_la_SOURCES += math.c
 
 # We need the following in order to create <math.h> when the system
 # doesn't have one that works with the given compiler.
@@ -886,7 +891,7 @@ EXTRA_DIST += math.in.h
 
 ## begin gnulib module mbchar
 
-libgnu_a_SOURCES += mbchar.c
+libgnu_la_SOURCES += mbchar.c
 
 EXTRA_DIST += mbchar.h
 
@@ -894,7 +899,7 @@ EXTRA_DIST += mbchar.h
 
 ## begin gnulib module mbiter
 
-libgnu_a_SOURCES += mbiter.h mbiter.c
+libgnu_la_SOURCES += mbiter.h mbiter.c
 
 ## end   gnulib module mbiter
 
@@ -903,19 +908,19 @@ libgnu_a_SOURCES += mbiter.h mbiter.c
 
 EXTRA_DIST += mbrtowc.c
 
-EXTRA_libgnu_a_SOURCES += mbrtowc.c
+EXTRA_libgnu_la_SOURCES += mbrtowc.c
 
 ## end   gnulib module mbrtowc
 
 ## begin gnulib module mbscasecmp
 
-libgnu_a_SOURCES += mbscasecmp.c
+libgnu_la_SOURCES += mbscasecmp.c
 
 ## end   gnulib module mbscasecmp
 
 ## begin gnulib module mbschr
 
-libgnu_a_SOURCES += mbschr.c
+libgnu_la_SOURCES += mbschr.c
 
 ## end   gnulib module mbschr
 
@@ -924,25 +929,25 @@ libgnu_a_SOURCES += mbschr.c
 
 EXTRA_DIST += mbsinit.c
 
-EXTRA_libgnu_a_SOURCES += mbsinit.c
+EXTRA_libgnu_la_SOURCES += mbsinit.c
 
 ## end   gnulib module mbsinit
 
 ## begin gnulib module mbslen
 
-libgnu_a_SOURCES += mbslen.c
+libgnu_la_SOURCES += mbslen.c
 
 ## end   gnulib module mbslen
 
 ## begin gnulib module mbsncasecmp
 
-libgnu_a_SOURCES += mbsncasecmp.c
+libgnu_la_SOURCES += mbsncasecmp.c
 
 ## end   gnulib module mbsncasecmp
 
 ## begin gnulib module mbsstr
 
-libgnu_a_SOURCES += mbsstr.c
+libgnu_la_SOURCES += mbsstr.c
 
 EXTRA_DIST += str-kmp.h
 
@@ -950,7 +955,7 @@ EXTRA_DIST += str-kmp.h
 
 ## begin gnulib module mbswidth
 
-libgnu_a_SOURCES += mbswidth.h mbswidth.c
+libgnu_la_SOURCES += mbswidth.h mbswidth.c
 
 ## end   gnulib module mbswidth
 
@@ -959,13 +964,13 @@ libgnu_a_SOURCES += mbswidth.h mbswidth.c
 
 EXTRA_DIST += mbtowc-impl.h mbtowc.c
 
-EXTRA_libgnu_a_SOURCES += mbtowc.c
+EXTRA_libgnu_la_SOURCES += mbtowc.c
 
 ## end   gnulib module mbtowc
 
 ## begin gnulib module mbuiter
 
-libgnu_a_SOURCES += mbuiter.h mbuiter.c
+libgnu_la_SOURCES += mbuiter.h mbuiter.c
 
 ## end   gnulib module mbuiter
 
@@ -974,7 +979,7 @@ libgnu_a_SOURCES += mbuiter.h mbuiter.c
 
 EXTRA_DIST += memchr.c memchr.valgrind
 
-EXTRA_libgnu_a_SOURCES += memchr.c
+EXTRA_libgnu_la_SOURCES += memchr.c
 
 ## end   gnulib module memchr
 
@@ -983,7 +988,7 @@ EXTRA_libgnu_a_SOURCES += memchr.c
 
 EXTRA_DIST += memmem.c str-two-way.h
 
-EXTRA_libgnu_a_SOURCES += memmem.c
+EXTRA_libgnu_la_SOURCES += memmem.c
 
 ## end   gnulib module memmem-simple
 
@@ -992,7 +997,7 @@ EXTRA_libgnu_a_SOURCES += memmem.c
 
 EXTRA_DIST += mempcpy.c
 
-EXTRA_libgnu_a_SOURCES += mempcpy.c
+EXTRA_libgnu_la_SOURCES += mempcpy.c
 
 ## end   gnulib module mempcpy
 
@@ -1001,7 +1006,7 @@ EXTRA_libgnu_a_SOURCES += mempcpy.c
 
 EXTRA_DIST += memrchr.c
 
-EXTRA_libgnu_a_SOURCES += memrchr.c
+EXTRA_libgnu_la_SOURCES += memrchr.c
 
 ## end   gnulib module memrchr
 
@@ -1010,7 +1015,7 @@ EXTRA_libgnu_a_SOURCES += memrchr.c
 
 EXTRA_DIST += mkstemp.c
 
-EXTRA_libgnu_a_SOURCES += mkstemp.c
+EXTRA_libgnu_la_SOURCES += mkstemp.c
 
 ## end   gnulib module mkstemp
 
@@ -1019,7 +1024,7 @@ EXTRA_libgnu_a_SOURCES += mkstemp.c
 
 EXTRA_DIST += msvc-inval.c msvc-inval.h
 
-EXTRA_libgnu_a_SOURCES += msvc-inval.c
+EXTRA_libgnu_la_SOURCES += msvc-inval.c
 
 ## end   gnulib module msvc-inval
 
@@ -1028,7 +1033,7 @@ EXTRA_libgnu_a_SOURCES += msvc-inval.c
 
 EXTRA_DIST += msvc-nothrow.c msvc-nothrow.h
 
-EXTRA_libgnu_a_SOURCES += msvc-nothrow.c
+EXTRA_libgnu_la_SOURCES += msvc-nothrow.c
 
 ## end   gnulib module msvc-nothrow
 
@@ -1037,7 +1042,7 @@ EXTRA_libgnu_a_SOURCES += msvc-nothrow.c
 
 EXTRA_DIST += nl_langinfo.c
 
-EXTRA_libgnu_a_SOURCES += nl_langinfo.c
+EXTRA_libgnu_la_SOURCES += nl_langinfo.c
 
 ## end   gnulib module nl_langinfo
 
@@ -1050,7 +1055,7 @@ EXTRA_DIST += pathmax.h
 
 ## begin gnulib module printf-frexp
 
-libgnu_a_SOURCES += printf-frexp.c
+libgnu_la_SOURCES += printf-frexp.c
 
 EXTRA_DIST += printf-frexp.h
 
@@ -1058,11 +1063,11 @@ EXTRA_DIST += printf-frexp.h
 
 ## begin gnulib module printf-frexpl
 
-libgnu_a_SOURCES += printf-frexpl.c
+libgnu_la_SOURCES += printf-frexpl.c
 
 EXTRA_DIST += printf-frexp.c printf-frexpl.h
 
-EXTRA_libgnu_a_SOURCES += printf-frexp.c
+EXTRA_libgnu_la_SOURCES += printf-frexp.c
 
 ## end   gnulib module printf-frexpl
 
@@ -1071,7 +1076,7 @@ EXTRA_libgnu_a_SOURCES += printf-frexp.c
 
 EXTRA_DIST += regcomp.c regex.c regex.h regex_internal.c regex_internal.h regexec.c
 
-EXTRA_libgnu_a_SOURCES += regcomp.c regex.c regex_internal.c regexec.c
+EXTRA_libgnu_la_SOURCES += regcomp.c regex.c regex_internal.c regexec.c
 
 ## end   gnulib module regex
 
@@ -1080,7 +1085,7 @@ EXTRA_libgnu_a_SOURCES += regcomp.c regex.c regex_internal.c regexec.c
 
 EXTRA_DIST += secure_getenv.c
 
-EXTRA_libgnu_a_SOURCES += secure_getenv.c
+EXTRA_libgnu_la_SOURCES += secure_getenv.c
 
 ## end   gnulib module secure_getenv
 
@@ -1089,13 +1094,13 @@ EXTRA_libgnu_a_SOURCES += secure_getenv.c
 
 EXTRA_DIST += float+.h signbitd.c signbitf.c signbitl.c
 
-EXTRA_libgnu_a_SOURCES += signbitd.c signbitf.c signbitl.c
+EXTRA_libgnu_la_SOURCES += signbitd.c signbitf.c signbitl.c
 
 ## end   gnulib module signbit
 
 ## begin gnulib module size_max
 
-libgnu_a_SOURCES += size_max.h
+libgnu_la_SOURCES += size_max.h
 
 ## end   gnulib module size_max
 
@@ -1185,7 +1190,7 @@ EXTRA_DIST += $(top_srcdir)/build-aux/snippet/warn-on-use.h
 
 EXTRA_DIST += stat.c
 
-EXTRA_libgnu_a_SOURCES += stat.c
+EXTRA_libgnu_la_SOURCES += stat.c
 
 ## end   gnulib module stat
 
@@ -1559,7 +1564,7 @@ EXTRA_DIST += stdlib.in.h
 
 EXTRA_DIST += stpcpy.c
 
-EXTRA_libgnu_a_SOURCES += stpcpy.c
+EXTRA_libgnu_la_SOURCES += stpcpy.c
 
 ## end   gnulib module stpcpy
 
@@ -1568,7 +1573,7 @@ EXTRA_libgnu_a_SOURCES += stpcpy.c
 
 EXTRA_DIST += strcasecmp.c strncasecmp.c
 
-EXTRA_libgnu_a_SOURCES += strcasecmp.c strncasecmp.c
+EXTRA_libgnu_la_SOURCES += strcasecmp.c strncasecmp.c
 
 ## end   gnulib module strcase
 
@@ -1577,7 +1582,7 @@ EXTRA_libgnu_a_SOURCES += strcasecmp.c strncasecmp.c
 
 EXTRA_DIST += str-two-way.h strcasestr.c
 
-EXTRA_libgnu_a_SOURCES += strcasestr.c
+EXTRA_libgnu_la_SOURCES += strcasestr.c
 
 ## end   gnulib module strcasestr-simple
 
@@ -1586,7 +1591,7 @@ EXTRA_libgnu_a_SOURCES += strcasestr.c
 
 EXTRA_DIST += strdup.c
 
-EXTRA_libgnu_a_SOURCES += strdup.c
+EXTRA_libgnu_la_SOURCES += strdup.c
 
 ## end   gnulib module strdup-posix
 
@@ -1602,7 +1607,7 @@ EXTRA_DIST += streq.h
 
 EXTRA_DIST += strerror.c
 
-EXTRA_libgnu_a_SOURCES += strerror.c
+EXTRA_libgnu_la_SOURCES += strerror.c
 
 ## end   gnulib module strerror
 
@@ -1611,7 +1616,7 @@ EXTRA_libgnu_a_SOURCES += strerror.c
 
 EXTRA_DIST += strerror-override.c strerror-override.h
 
-EXTRA_libgnu_a_SOURCES += strerror-override.c
+EXTRA_libgnu_la_SOURCES += strerror-override.c
 
 ## end   gnulib module strerror-override
 
@@ -1751,7 +1756,7 @@ EXTRA_DIST += strings.in.h
 
 EXTRA_DIST += strndup.c
 
-EXTRA_libgnu_a_SOURCES += strndup.c
+EXTRA_libgnu_la_SOURCES += strndup.c
 
 ## end   gnulib module strndup
 
@@ -1760,13 +1765,13 @@ EXTRA_libgnu_a_SOURCES += strndup.c
 
 EXTRA_DIST += strnlen.c
 
-EXTRA_libgnu_a_SOURCES += strnlen.c
+EXTRA_libgnu_la_SOURCES += strnlen.c
 
 ## end   gnulib module strnlen
 
 ## begin gnulib module strnlen1
 
-libgnu_a_SOURCES += strnlen1.h strnlen1.c
+libgnu_la_SOURCES += strnlen1.h strnlen1.c
 
 ## end   gnulib module strnlen1
 
@@ -1775,7 +1780,7 @@ libgnu_a_SOURCES += strnlen1.h strnlen1.c
 
 EXTRA_DIST += str-two-way.h strstr.c
 
-EXTRA_libgnu_a_SOURCES += strstr.c
+EXTRA_libgnu_la_SOURCES += strstr.c
 
 ## end   gnulib module strstr-simple
 
@@ -1902,7 +1907,7 @@ EXTRA_DIST += sys_types.in.h
 
 ## begin gnulib module tempname
 
-libgnu_a_SOURCES += tempname.c
+libgnu_la_SOURCES += tempname.c
 
 EXTRA_DIST += tempname.h
 
@@ -1910,7 +1915,7 @@ EXTRA_DIST += tempname.h
 
 ## begin gnulib module threadlib
 
-libgnu_a_SOURCES += glthread/threadlib.c
+libgnu_la_SOURCES += glthread/threadlib.c
 
 EXTRA_DIST += $(top_srcdir)/build-aux/config.rpath
 
@@ -1965,7 +1970,7 @@ EXTRA_DIST += time.in.h
 ## begin gnulib module unistd
 
 BUILT_SOURCES += unistd.h
-libgnu_a_SOURCES += unistd.c
+libgnu_la_SOURCES += unistd.c
 
 # We need the following in order to create an empty placeholder for
 # <unistd.h> when the system doesn't have one.
@@ -2151,7 +2156,7 @@ EXTRA_DIST += localcharset.h uniwidth.in.h
 ## begin gnulib module uniwidth/width
 
 if LIBUNISTRING_COMPILE_UNIWIDTH_WIDTH
-libgnu_a_SOURCES += uniwidth/width.c
+libgnu_la_SOURCES += uniwidth/width.c
 endif
 
 EXTRA_DIST += uniwidth/cjk.h
@@ -2163,7 +2168,7 @@ EXTRA_DIST += uniwidth/cjk.h
 
 EXTRA_DIST += asnprintf.c float+.h printf-args.c printf-args.h printf-parse.c printf-parse.h vasnprintf.c vasnprintf.h
 
-EXTRA_libgnu_a_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
+EXTRA_libgnu_la_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
 
 ## end   gnulib module vasnprintf
 
@@ -2172,7 +2177,7 @@ EXTRA_libgnu_a_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
 
 EXTRA_DIST += asprintf.c vasprintf.c
 
-EXTRA_libgnu_a_SOURCES += asprintf.c vasprintf.c
+EXTRA_libgnu_la_SOURCES += asprintf.c vasprintf.c
 
 ## end   gnulib module vasprintf
 
@@ -2309,14 +2314,14 @@ EXTRA_DIST += wchar.in.h
 
 EXTRA_DIST += wcrtomb.c
 
-EXTRA_libgnu_a_SOURCES += wcrtomb.c
+EXTRA_libgnu_la_SOURCES += wcrtomb.c
 
 ## end   gnulib module wcrtomb
 
 ## begin gnulib module wctype-h
 
 BUILT_SOURCES += wctype.h
-libgnu_a_SOURCES += wctype-h.c
+libgnu_la_SOURCES += wctype-h.c
 
 # We need the following in order to create <wctype.h> when the system
 # doesn't have one that works with the given compiler.
@@ -2358,13 +2363,13 @@ EXTRA_DIST += wctype.in.h
 
 EXTRA_DIST += wcwidth.c
 
-EXTRA_libgnu_a_SOURCES += wcwidth.c
+EXTRA_libgnu_la_SOURCES += wcwidth.c
 
 ## end   gnulib module wcwidth
 
 ## begin gnulib module xalloc
 
-libgnu_a_SOURCES += xmalloc.c
+libgnu_la_SOURCES += xmalloc.c
 
 EXTRA_DIST += xalloc.h
 
@@ -2372,7 +2377,7 @@ EXTRA_DIST += xalloc.h
 
 ## begin gnulib module xalloc-die
 
-libgnu_a_SOURCES += xalloc-die.c
+libgnu_la_SOURCES += xalloc-die.c
 
 ## end   gnulib module xalloc-die
 
@@ -2385,7 +2390,7 @@ EXTRA_DIST += xalloc-oversized.h
 
 ## begin gnulib module xsize
 
-libgnu_a_SOURCES += xsize.h xsize.c
+libgnu_la_SOURCES += xsize.h xsize.c
 
 ## end   gnulib module xsize
 
